tests/error/overload_errors/higher_order.err
Error: Higher-order overloaded function (at $FILE:18:8)
   | 
16 | @guppy
17 | def main() -> None:
18 |     f = overloaded
   |         ^^^^^^^^^^ Overloaded function `overloaded` may not be used as a
   |                    higher-order value

Guppy compilation failed due to 1 previous error
